--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0">
   <title>Handy PC</title>
+  <link rel="icon" href="/favicon.png">
 </head>
 <body>
   <div id="container">
