fix: use absluaate path related to site root of the link of evaluate page.

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="evaluate-button-container">
-      <a href="./evaluate">
+      <a href="/evaluate">
         <button id="evaluate-button">來企估價→</button>
       </a>
     </div>
