--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=0">
   <title>Handy PC</title>
   <link rel="icon" href="/favicon.png">
+  <link rel="stylesheet" href="/style/theme.css">
+  <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
   <div id="container">
