--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -9,16 +9,21 @@
   <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-  <div id="container">
+  <div class="page-container">
 
-    <div id="title-container">
+    <div id="center-container" class="container">
+
       <h1>Handy PC :(</h1>
-    </div>
 
-    <div id="evaluate-button-container">
-      <a href="/evaluate">
-        <button id="evaluate-button">來企估價→</button>
-      </a>
+      <div id="evaluate-button-container">
+        <a href="/evaluate">
+          <button id="evaluate-button">來企估價→</button>
+        </a>
+      </div>
+
+      <footer class="page-footer">
+          <span>2020 &copy; HandyPC Team</span>
+      </footer>
     </div>
 
   </div>
