Add hover effect to title and evaluate button.

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -13,11 +13,13 @@
 
     <div id="center-container" class="container">
 
-      <h1>Handy PC :(</h1>
+      <div id="title-container" class="title-font">
+        <h1>Handy PC :(</h1>
+      </div>
 
-      <div id="evaluate-button-container">
+      <div id="evaluate-button">
         <a href="/evaluate">
-          <button id="evaluate-button">來企估價→</button>
+          <span>來企估價→</span>
         </a>
       </div>
 
